--- a/Adwanced/assets/p2.html
+++ b/Adwanced/assets/p2.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
-  
-    
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <section class="title">
         <h1>CSS CURSOR...!</h1>
-        <P>CSS vursor property used to define cursor type(i.e.mouse pointer)when the mouse moves over certain area or, over link on the website or any html elements.</P>
+        <P>CSS cursor property used to define cursor type(i.e.mouse pointer)when the mouse moves over certain area or, over link on the website or any html elements.</P>
     </section>
     <section class="common">
         <h1>EXAMPLE...!</h1>
