--- a/Adwanced/assets/p7.html
+++ b/Adwanced/assets/p7.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <section class="comman ">
+<section class="common cssWordwrap ">
+    <h1>CSS WordWrap</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero veritatis rerum ex iste. Alias eius aliquam soluta. Nostrum, et suscipit. Minima maxime ea debitis aut voluptas laborum dignissimos dicta enim!
 
+    </p>
     </section>
 
 </body>
